# maya-agent

./: .gitignore  PRD.md  README.md  pyproject.toml
docs/: architecture.md  glass-deviations.md  glass-progress.md  glass-summary.md  protocol.md  smoke-test-instructions.md  studio-deployment.md  writing-a-tool.md
docs/superpowers/plans/: 2026-05-01-maya-agent-v1-implementation.md
docs/superpowers/specs/: 2026-05-01-maya-agent-v1-design.md
scripts/: check-studio-env.py  install_into_maya.py
src/maya_agent/core/: frames.py  plugin_loader.py  protocol.py  registry.py
src/maya_agent/maya/: command_server.py  maya_bootstrap.py  panel.py  tool_dispatcher.py
src/maya_agent/maya/tools/: find_euler_discontinuities.py  fix_euler_discontinuities.py  inspect_scene.py  playblast.py  query_animation_curves.py
src/maya_agent/sidecar/: __main__.py  agent_loop.py  llm_client.py  maya_client.py  ollama_client.py  prompts.py  recording_clients.py  state.py
src/tools_common/: __init__.py
tests/eval/: conftest.py  matchers.py  runner.py  test_eval_cases.py
tests/eval/cases/: euler_cleanup_ambiguous_arms.json  euler_cleanup_basic.json  malformed_response_recovery.json  playblast_with_assumptions.json  step_limit_exceeded.json  tool_error_recovery.json  unknown_tool_request.json
tests/unit/: test_agent_loop.py  test_frames.py  test_matchers.py  test_maya_client.py  test_plugin_loader.py  test_prompts.py  test_protocol.py  test_qt_binding_neutrality.py  test_recording_clients.py  test_registry.py  test_state.py  test_tool.py  test_tool_dispatcher.py
