[project]
name = "maya-agent"
version = "0.1.0"
description = "Maya-integrated agentic AI framework"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.6.0",
]

[project.optional-dependencies]
# qtpy abstracts over PySide2 (Maya 2024) and PySide6 (Maya 2025+).
# Maya supplies the Qt binding itself; this extra only adds the qtpy shim.
maya = ["qtpy>=2.4.0"]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/maya_agent", "src/tools_common"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
